	  You can still specify ';;' instead of course.
	- Added TYPE statement.
	- Set library version to 2.7.0

Tue Feb  9 07:07:11 CET 1999

	- Synced preproc.y with gram.y.

Tue Feb  9 20:21:44 CET 1999

	- Added FREE statement.

Wed Feb 10 07:51:09 CET 1999

	- Synced keyword.c.

Sat Feb 13 10:44:43 CET 1999

	- Added DECLARE STATEMENT for compatibility with Oracle. De facto
	  this statement does nothing.
	- Added VAR statement.

Son Feb 14 11:36:04 CET 1999

	- Added type 'enum' to TYPE and VAR statement. 
	- Allow ecpg keywords as datatypes.

Thu Feb 18 08:35:35 CET 1999

	- Make sure indicator for array is array too.

Fri Feb 19 18:38:45 CET 1999

	- Finished type aliasing for structures.
	- Set ecpg version to 2.5.0

Fri Feb 19 21:40:14 CET 1999

	- Fixed bug in libecpg that caused it to start transactions only for
	  the first connection.
	- Set library version to 2.7.1

Son Feb 21 14:10:47 CET 1999

	- Fixed variable detection in libecpg.

Mon Feb 22 19:47:45 CET 1999

	- Added 'at <db_connection>' option to all commands it is apllicable
	  to. Due to changing the API of some libecpg functions this
	  requires me to increase the major version number of libecpg.
	- Synced pgc.l with scan.l.
	- Added support for unions.

Tue Feb 23 17:32:25 CET 1999

	- Other than a struct a union itself cannot be specified as variable.

Fri Feb 26 07:18:25 CET 1999

	- Synced preproc.y with gram.y.

Sat Feb 27 20:30:03 CET 1999

	- Added automatic allocating for NULL pointers.

Mon Mar  1 20:16:24 CET 1999

	- Fixed parser bug that caused it to miss some blanks during output.

Thu Mar  4 19:49:28 CET 1999

	- Fixed bug in ecpglib.c that caused it to allocate to few memory.
	- Switched memory allocation to calloc() to make sure memory is
	  cleared.
	- Fixed varchar auto-allocating.

Sat Mar  6 14:06:07 CET 1999

	- Replaced placeholder ';;' by '?' since this is what standard says.
	- Set library version to 3.0.0
	- Set ecpg version to 2.6.0